[package]
name = "gtk_min"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gtk4-helper = {git = "https://github.com/njust/gtk4-helper.git"}
sourceview5 = "0.2.0"

# MacOS metadata
[package.metadata.bundle]
identifier="de.ktail"
icon = ["./assets/app-icon/128x128.png"]
name = "GtkMin"
copyright = "Copyright © 2022 Nico Just"