[package]
name = "gtk_min"
version = "0.1.0"
edition = "2018"
description = "Minimal Gtk App"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gtk = {version = "0.4.4", package = "gtk4"}
sourceview5 = "0.4.0"

# MacOS metadata
[package.metadata.bundle]
identifier="de.ktail"
icon = ["./assets/app-icon/128x128.png"]
name = "GtkMin"
copyright = "Copyright © 2022 Nico Just"